# Tetris

./: .gitignore  CMakeLists.txt  README.md  main.cpp  Історія  шаблон звіту .docx
main/: cpp
